src/snapshot_middleware/snapshots/librojo__snapshot_middleware__csv__test__csv_init.snap
---
source: src/snapshot_middleware/csv.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: /root
  relevant_paths:
    - /root
    - /root/init.lua
    - /root/init.luau
    - /root/init.server.lua
    - /root/init.server.luau
    - /root/init.client.lua
    - /root/init.client.luau
    - /root/init.csv
    - /root/init.meta.json
    - /root/init.meta.jsonc
  context:
    emit_legacy_scripts: true
  specified_id: ~
  middleware: ~
  schema: ~
name: root
class_name: LocalizationTable
properties:
  Contents:
    String: "[{\"key\":\"Ack\",\"example\":\"An exclamation of despair\",\"source\":\"Ack!\",\"values\":{\"es\":\"¡Ay!\"}}]"
children: []
